# MaCEDemoTemp

./: README.md  pyproject.toml  simulate.py
demo_data/demo_macenca/: chicken.pth  lizard.pth  octopus.pth  virus.pth
pyca/automata/: MassConsevingNCA.ipynb  __init__.py  macenca.py
pyca/automata/models/: __init__.py  conserv_ca.py  macenca.py
pyca/automata/models/lenia/: mace_lenia_xchan.py  macelenia.py
pyca/automata/utils/: torch_utils.py
pyca/interface/: MainWindow.py
pyca/interface/files/: default_configs.py
pyca/interface/ui_components/: MultiToggle.py  Toggle.py
